# Deteksi-Gambar-Buatan-AI-vs-Buatan-Manusia-Menggunakan-Deep-Learning

./: .gitignore  README.md  main.py  pyproject.toml
core/: __init__.py  detector_data.py  model_loader.py  web_app.py
notebooks/: IRIS_Short term project 1.ipynb  Training.ipynb
web/static/css/: app.css
web/static/js/: app.js
web/templates/: index.html
